--- a/gb/21/3/12/n12808230.md
+++ b/gb/21/3/12/n12808230.md
@@ -1,23 +1,23 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/boyqsg391/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/boyqsg391/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/boyqsg391/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/boyqsg391/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/boyqsg391/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/boyqsg391/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/boyqsg391/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/boyqsg391/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/boyqsg391/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/boyqsg391/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/boyqsg391/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/boyqsg391/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/boyqsg391/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/boyqsg391/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/boyqsg391/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/boyqsg391/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/boyqsg391/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/boyqsg391/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/boyqsg391/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/boyqsg391/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/boyqsg391/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/boyqsg391/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/boyqsg391/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/boyqsg391/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/boyqsg391/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/boyqsg391/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/boyqsg391/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/boyqsg391/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/boyqsg391/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/boyqsg391/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/boyqsg391/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/boyqsg391/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/boyqsg391/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/boyqsg391/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/boyqsg391/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/boyqsg391/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/boyqsg391/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/boyqsg391/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/boyqsg391/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/boyqsg391/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/boyqsg391/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/boyqsg391/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/boyqsg391/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/boyqsg391/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/boyqsg391/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/boyqsg391/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/boyqsg391/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/xsumwp3307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/xsumwp3307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/xsumwp3307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>【秦鹏直播】女辅警敲诈案是冤案？盘点9大疑点</h2>
-<a href="https://git.io/JqC4y"><img width="600" src="https://raw.githubusercontent.com/boyqsg391/djy/master/gb/300/djtsp.jpg"title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/boyqsg391/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3>
+<a href="https://dqgl8k1bfvgsc.cloudfront.net/G7aHijHQq"><img width="600" src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/xsumwp3307/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3>
 <h6>女辅警敲诈案是冤案？盘点九大疑点。（大纪元合成）
 </h6>
 <hr>
 	<p>【大纪元2021年03月13日讯】观众朋友大家好，今天是美东时间3月12日，星期五，欢迎收看时事天天聊，我是Sydney，王愉贺。我是秦鹏。</p>
-<p>Sydney：江苏连云港市的<ahref="https://github.com/boyqsg391/djy/blob/master/gb/tag/%E5%A5%B3%E8%BE%85%E8%AD%A6.md#1">女辅警</a>敲诈7名公职人员的案件，一夜网络爆红，当地警方几分钟内要求律师撤案，宣判书更被从网上下线，事件还惊动了中宣部和新华社的高层，那么到底发生了什么了？</p>
-<p>秦鹏：知名律师说这是<ahref="https://github.com/boyqsg391/djy/blob/master/gb/tag/%E5%86%A4%E6%A1%88.md#1">冤案</a>，那么到底冤在哪里？我们今天来给大家盘点一下相关的诸多疑点。还有，仔细看法院宣判书的措辞很诡异， 是否揭示了中共官场黑暗的潜规则？</p>
-<p><center><a src=""></a><a href="https://git.io/JqC4y"><img width="600" src="https://raw.githubusercontent.com/boyqsg391/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/boyqsg391/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><hr><a src="https://www.youtube.com/embed/NbxS3bde_zY" width="640" b="360" frameborder="0" allowfullscreen="allowfullscreen"></a><center></center></center></p>
+<p>Sydney：江苏连云港市的<ahref="https://github.com/xsumwp3307/djy/blob/master/gb/tag/%E5%A5%B3%E8%BE%85%E8%AD%A6.md#1">女辅警</a>敲诈7名公职人员的案件，一夜网络爆红，当地警方几分钟内要求律师撤案，宣判书更被从网上下线，事件还惊动了中宣部和新华社的高层，那么到底发生了什么了？</p>
+<p>秦鹏：知名律师说这是<ahref="https://github.com/xsumwp3307/djy/blob/master/gb/tag/%E5%86%A4%E6%A1%88.md#1">冤案</a>，那么到底冤在哪里？我们今天来给大家盘点一下相关的诸多疑点。还有，仔细看法院宣判书的措辞很诡异， 是否揭示了中共官场黑暗的潜规则？</p>
+<p><center><a src=""></a><a href="https://dqgl8k1bfvgsc.cloudfront.net/G7aHijHQq"><img width="600" src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/xsumwp3307/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/embed/NbxS3bde_zY" width="640" b="360" frameborder="0" allowfullscreen="allowfullscreen"></a><center></center></center></p>
 <h2>爆红网络的一份宣判书</h2>
-<p>Sydney：一份判决文书，爆红中文网络。这份江苏省灌南县法院在2020年12月29日做出的判决显示：一位90后<ahref="https://github.com/boyqsg391/djy/blob/master/gb/tag/%E5%A5%B3%E8%BE%85%E8%AD%A6.md#1">女辅警</a>在5年时间里，同时或不间断地与9名公职人员发生关系，向对方索要了近400万元，被认定是触犯了<ahref="https://github.com/boyqsg391/djy/blob/master/gb/tag/%E6%95%B2%E8%AF%88%E5%8B%92%E7%B4%A2.md#1">敲诈勒索</a>罪。</p>
+<p>Sydney：一份判决文书，爆红中文网络。这份江苏省灌南县法院在2020年12月29日做出的判决显示：一位90后<ahref="https://github.com/xsumwp3307/djy/blob/master/gb/tag/%E5%A5%B3%E8%BE%85%E8%AD%A6.md#1">女辅警</a>在5年时间里，同时或不间断地与9名公职人员发生关系，向对方索要了近400万元，被认定是触犯了<ahref="https://github.com/xsumwp3307/djy/blob/master/gb/tag/%E6%95%B2%E8%AF%88%E5%8B%92%E7%B4%A2.md#1">敲诈勒索</a>罪。</p>
 <p>秦鹏：判决结果显示，这位94年出生的年轻女辅警被判13年，并被处以500万元的天价罚款。让人大跌眼镜的是，被认定的所谓的受害人中，包括三位派出所所长与一位公安局副局长。这样的关键词汇集在一起，立即引爆了网络。</p>
 <p>而且，从宣判书看，平均每人给了女辅警近40万元，其中有两个派出所长一个给了她100万元，一个给了128万元，网络吐槽：小小的派出所长，这么有钱了吗？</p>
 <h2>官方要求删贴忙</h2>
-<p>Sydney：3月11日，这份<ahref="https://github.com/boyqsg391/djy/blob/master/gb/tag/%E5%88%A4%E5%86%B3%E4%B9%A6.md#1">判决书</a>被知名律师张新年转发后，当地有关部门竟在5分钟内就找到了他，并要求他能够配合删掉。而其他转发者也纷纷接到了江苏官方的电话。</p>
+<p>Sydney：3月11日，这份<ahref="https://github.com/xsumwp3307/djy/blob/master/gb/tag/%E5%88%A4%E5%86%B3%E4%B9%A6.md#1">判决书</a>被知名律师张新年转发后，当地有关部门竟在5分钟内就找到了他，并要求他能够配合删掉。而其他转发者也纷纷接到了江苏官方的电话。</p>
 <p>张新年周五对陆媒《大白新闻》表示，自称是江苏连云港的来电者表示，这个贴文在市里“闹得挺火”，希望张新年律师将其删除。</p>
-<p>张新年律师则表示，该<ahref="https://github.com/boyqsg391/djy/blob/master/gb/tag/%E5%88%A4%E5%86%B3%E4%B9%A6.md#1">判决书</a>是最高法院裁判文书网上发的，不是虚假消息，没有理由删除。</p>
+<p>张新年律师则表示，该<ahref="https://github.com/xsumwp3307/djy/blob/master/gb/tag/%E5%88%A4%E5%86%B3%E4%B9%A6.md#1">判决书</a>是最高法院裁判文书网上发的，不是虚假消息，没有理由删除。</p>
 <p>对方说，裁判文书网上已经撤下了这份判决书，张新年表示，“传上去的属于司法公开，怎么能随意撤下来呢？”这个案子既不涉密，也不涉及隐私。如果涉密或者隐私，当时就不应该上传。</p>
 <p>所以他跟对方说：“向你的领导反映一下，不要再给发帖子的人打电话，再打电话更加有损当地的形象。”</p>
 <p>自由亚洲电台也报导说，连云港警方直接给各地的网民打电话要求删帖，有多人都录下与警方对话的录音并向外发布，他们据理力争，引起了网民的更大关注，让当局更加难堪。</p>
@@ -41,11 +41,11 @@
 <p>裁判文书网刘某受贿罪一审刑事判决书显示，根据检方指控，2013年7月至2019年4月间，刘某利用担任连云港市公安局海州分局（新浦分局）路南派出所所长、海州分局副局长的职务便利，收受陈某甲、顾某、曹某等26人财物，折合人民币共计746000元，为其在酒店、娱乐会所（KTV）、足疗店、烟花爆竹的经营等方面提供便利条件；为顾某、尹某、徐某等人在案件处理方面提供帮助。</p>
 <p>很明显，这些处罚，跟本案件没有一分钱的关系。而且，按照中共官场的惯例，这种事情过去就过去了，不可能真正的处罚那些人的，甚至我们从女辅警许艳的判决书看到的是，那些人还是受害人。</p>
 <p>Sydney：但是，新华社的新华焦点微博，12日晚上发布消息说“灌云县涉案的7名公职人员已于2019年底分别受到撤销党内职务、行政撤职等党政纪处分。”</p>
-<p>秦鹏：我还是怀疑，中共经常在重大社会事件，曝光了当局的丑闻之后，编造谎言，特别是当这种新闻来自宣传部门的时候更是这样。如果真的，那么不妨进一步公布具体每一个人的处分到底是什么，不就一目了然了吗？为什么用一个含含糊糊的“等”应付了事？<ahref="https://github.com/boyqsg391/djy/blob/master/gb/tag/%E5%86%A4%E6%A1%88.md#1">冤案</a>？</p>
+<p>秦鹏：我还是怀疑，中共经常在重大社会事件，曝光了当局的丑闻之后，编造谎言，特别是当这种新闻来自宣传部门的时候更是这样。如果真的，那么不妨进一步公布具体每一个人的处分到底是什么，不就一目了然了吗？为什么用一个含含糊糊的“等”应付了事？<ahref="https://github.com/xsumwp3307/djy/blob/master/gb/tag/%E5%86%A4%E6%A1%88.md#1">冤案</a>？</p>
 <p>Sydney：目前，该案是一审判决，女辅警家属是否提请上诉，还不得而知，但律师对此案表达了不同意见。如张新年律师表示：这个案子也是明显判得有问题，女辅警蒙冤了。这方面怎么看？</p>
 <h2>年轻小辅警是临时工 被“共享情妇”？</h2>
 <p>秦鹏：首先，被判刑的是一个年轻的小辅警。这种岗位，实际上就是临时工，在警察里面可能永远不能转正，那么对任何一个正式警察来说，都是她的上司。她在第一次和派出所长发生关系的时候，只有20岁，这种是自愿的吗？几乎可以确定不可能，除非对方答应给她转正，或者给钱。即使那样，也属于派出所长犯罪，或最起码是违法。</p>
-<p>其次，许艳还和其他多个派出所长和一个副局长有不当关系，那么问题是，这是中共官场共享情妇的潜规则，还是进贡给上级？我们知道中共这方面很丑陋，比如军中妖姬汤灿，就是徐才厚、薄熙来、周永康等的公共情妇。那么，给的钱到底是官员们玩弄女人的大手笔补偿，还是<ahref="https://github.com/boyqsg391/djy/blob/master/gb/tag/%E6%95%B2%E8%AF%88%E5%8B%92%E7%B4%A2.md#1">敲诈勒索</a>，也很难说。</p>
+<p>其次，许艳还和其他多个派出所长和一个副局长有不当关系，那么问题是，这是中共官场共享情妇的潜规则，还是进贡给上级？我们知道中共这方面很丑陋，比如军中妖姬汤灿，就是徐才厚、薄熙来、周永康等的公共情妇。那么，给的钱到底是官员们玩弄女人的大手笔补偿，还是<ahref="https://github.com/xsumwp3307/djy/blob/master/gb/tag/%E6%95%B2%E8%AF%88%E5%8B%92%E7%B4%A2.md#1">敲诈勒索</a>，也很难说。</p>
 <p>所以，这一次网络发酵这么厉害，就是因为中共官场的这些黑暗的惯例和潜规则，所以才群情激愤。比如，资深媒体人朱学东就说，那些睡了女辅警被女辅警所谓敲诈了的男警察领导，哪一个是好东西？好意思称受害人？</p>
 <p>Sydney：听起来很有道理，能不能从具体案件来说一下，还有哪些疑点呢？</p>
 <p>秦鹏：当然可以。</p>
@@ -85,48 +85,48 @@
 <p>秦鹏：节目最后再提醒大家，因为Youtube现在审查越来越严厉，我们另一个平台【YOUMAKER优美客】上也建立了一个频道，这个平台将是我们未来长期使用的平台，它的链接就贴在今天节目的文字介绍及置顶留言中，欢迎大家在优美客上注册账号并关注我们！</p>
 <p>Sydney：每周一到周五晚上六点，我们会持续为大家跟进最新时事。感谢大家的收看，我们下次再见。</p>
 <p>秦鹏：周末愉快。</p>
-<p>《<ahref="https://github.com/boyqsg391/djy/blob/master/gb/tag/%E7%A7%A6%E9%B9%8F%E7%9B%B4%E6%92%AD.md#1">秦鹏直播</a>》制作组</p>
+<p>《<ahref="https://github.com/xsumwp3307/djy/blob/master/gb/tag/%E7%A7%A6%E9%B9%8F%E7%9B%B4%E6%92%AD.md#1">秦鹏直播</a>》制作组</p>
 <p>责任编辑：李昊#</p>
 	
 <hr>
 <hr>
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/boyqsg391/djy/blob/master/gb/21/3/8/n12798218.md#1">【秦鹏直播】方斌传有下落 中国疫苗接种1年了？</a></li>
-<li><a href="https://github.com/boyqsg391/djy/blob/master/gb/21/3/9/n12800625.md#1">【秦鹏直播】两会台湾代表惹笑 美中高科技决战？</a></li>
-<li><a href="https://github.com/boyqsg391/djy/blob/master/gb/21/3/10/n12803091.md#1">【秦鹏直播】习近平称全军备战 在恐吓谁？</a></li>
-<li><a href="https://github.com/boyqsg391/djy/blob/master/gb/21/3/11/n12805655.md#1">【秦鹏直播】蓬佩奥连发声 呛中共“太恶毒”</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/21/3/8/n12798218.md#1">【秦鹏直播】方斌传有下落 中国疫苗接种1年了？</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/21/3/9/n12800625.md#1">【秦鹏直播】两会台湾代表惹笑 美中高科技决战？</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/21/3/10/n12803091.md#1">【秦鹏直播】习近平称全军备战 在恐吓谁？</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/21/3/11/n12805655.md#1">【秦鹏直播】蓬佩奥连发声 呛中共“太恶毒”</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/boyqsg391/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank">警卫目击活摘器官</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/4/24/n11208751.md#1" target="_blank">【征文】张东园：中国国学大师的血泪遭遇(4)</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/31/n11292679.md#1" target="_blank">美国国务院将对迫害法轮功者 严格审核签证</a></li><hr>
+<li><a href="https://github.com/ychojm359/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank">大陆见不到的震撼场面</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/3/10/n11102523.md#1" target="_blank">马吉卫：难以平复的伤疤</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/6/14/n7998054.md#1" target="_blank">“如没有法轮功 我后半生一定在轮椅上度过”</a></li><hr>
 
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/boyqsg391/djy/blob/master/gb/20/12/30/n12654624.md#1">【命理】如何看大运 为何前后半生两重天？</a></li>
-<li><a href="https://github.com/boyqsg391/djy/blob/master/gb/21/3/7/n12794550.md#1">遥视月球 特异功能者惊出冷汗</a></li>
-<li><a href="https://github.com/boyqsg391/djy/blob/master/gb/21/3/5/n12792526.md#1">【未解之谜】外星人引发的绝密“泽塔行动”</a></li>
-<li><a href="https://github.com/boyqsg391/djy/blob/master/gb/21/3/7/n12794570.md#1">“消失的同学”轰动网路 难道真有另一个世界？</a></li>
-<li><a href="https://github.com/boyqsg391/djy/blob/master/gb/21/3/7/n12794882.md#1">晚清人到地府办差 往来阴阳两界透天机</a></li>
-<li><a href="https://github.com/boyqsg391/djy/blob/master/gb/21/3/11/n12804912.md#1">【新闻大家谈】架空李克强 习挑“空降兵”？</a></li>
-<li><a href="https://github.com/boyqsg391/djy/blob/master/gb/21/3/11/n12805655.md#1">【秦鹏直播】蓬佩奥连发声 呛中共“太恶毒”</a></li>
-<li><a href="https://github.com/boyqsg391/djy/blob/master/gb/21/3/11/n12805079.md#1">【财商天下】中信国安7年财务造假 谁是败家子？</a></li>
-<li><a href="https://github.com/boyqsg391/djy/blob/master/gb/21/3/10/n12801759.md#1">侯佩岑携母提黑历史赚钱 蔡诗萍分析为何众怒</a></li>
-<li><a href="https://github.com/boyqsg391/djy/blob/master/gb/21/3/9/n12800602.md#1">【新闻看点】习一石三鸟？李克强架空 韩正有风险</a></li>
-<li><a href="https://github.com/boyqsg391/djy/blob/master/gb/21/3/10/n12802899.md#1">布林肯见杨洁篪谈什么 美方公布五话题</a></li>
-<li><a href="https://github.com/boyqsg391/djy/blob/master/gb/21/3/10/n12801759.md#1">侯佩岑携母提黑历史赚钱 蔡诗萍分析为何众怒</a></li>
-<li><a href="https://github.com/boyqsg391/djy/blob/master/gb/21/3/9/n12800458.md#1">叹“再见了熟悉的陌生人”范冰冰疑喊话李晨</a></li>
-<li><a href="https://github.com/boyqsg391/djy/blob/master/gb/21/3/11/n12805460.md#1">郭富城紧急捐款 助38岁港星治疗肺癌第四期</a></li>
-<li><a href="https://github.com/boyqsg391/djy/blob/master/gb/21/3/10/n12802687.md#1">刘诗诗晒自拍照庆生 吴奇隆别样秀恩爱</a></li>
-<li><a href="https://github.com/boyqsg391/djy/blob/master/gb/21/3/11/n12805292.md#1">情牵夏克立15年 黄嘉千分享异国婚姻保鲜秘笈</a></li>
-<li><a href="https://github.com/boyqsg391/djy/blob/master/gb/21/3/9/n12799710.md#1">脂肪容易往肚子囤　２种动作边看电视边瘦小腹</a></li>
-<li><a href="https://github.com/boyqsg391/djy/blob/master/gb/21/3/10/n12801669.md#1">为躲避虎鲸追杀 南极小企鹅跳到游客船上</a></li>
-<li><a href="https://github.com/boyqsg391/djy/blob/master/gb/21/3/10/n12801040.md#1">湖北动物园标示“狼在此” 笼子里却是小狗</a></li>
-<li><a href="https://github.com/boyqsg391/djy/blob/master/gb/21/3/10/n12801372.md#1">如何因应僵尸攻击？ 美国CDC告诉你</a></li>
-<li><a href="https://github.com/boyqsg391/djy/blob/master/gb/21/3/10/n12802265.md#1">“一日五餐”果蔬混搭 有益身体健康</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/21/5/19/n12960167.md#1">男孩捡到疑似小美人鱼的骨骸 吓坏妈妈</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/21/5/20/n12962633.md#1">超自然研究者：数千英国人穿越 消失在过去</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/21/5/14/n12950057.md#1">【未解之谜】肉身成佛？慧能真身千年不坏</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/21/5/12/n12944071.md#1">【未解之谜】流落人间的金箍棒 印度德里铁柱</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/21/4/19/n12891294.md#1">道门出败类 张三丰出手示警</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/21/5/20/n12963139.md#1">【唐浩视界】中东火箭幕后黑手 台抗疫中共搅局</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/21/5/19/n12961300.md#1">【探索时分】太平洋定海神针 美救台的第七舰队</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/21/5/20/n12963444.md#1">【财商天下】真金还是泡沫？比特币的疯狂</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/21/5/19/n12959579.md#1">唐凤推简讯实联制5秒搞定 免费且免填个资</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/21/5/19/n12961144.md#1">印度疫情惨 恒河飘大量浮尸 警方跨河拉网</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/21/5/19/n12960904.md#1">深圳大楼乱晃惊动美领馆 向美国人发警告</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/21/5/19/n12961232.md#1">医生父亲台湾前线抗疫 炎亚纶心疼喊话</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/21/5/20/n12962574.md#1">周子瑜拥有罕见手相 命理老师：她有天使气场</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/21/5/19/n12960010.md#1">《月薪娇妻》新垣结衣与星野源成为真夫妻</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/21/5/18/n12958844.md#1">香港歌手黎瑞恩胰脏长肿瘤 不做手术奇迹康复</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/21/5/19/n12961659.md#1">“很难在大陆拍戏”香港导演彭浩翔移居加拿大</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/21/5/19/n12959656.md#1">台湾确诊激增 日本作家却看好2防疫关键</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/21/5/19/n12960642.md#1">清冠一号治新冠好得快、无副作用？这类人不能吃</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/21/5/19/n12960167.md#1">男孩捡到疑似小美人鱼的骨骸 吓坏妈妈</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/21/5/20/n12962633.md#1">超自然研究者：数千英国人穿越 消失在过去</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/21/5/18/n12957616.md#1">新冠确诊者传染力多强？这数字告诉你 越低越危险</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/boyqsg391/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/boyqsg391/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/3/12/n12808230.htm">【秦鹏直播】女辅警敲诈案是冤案？盘点9大疑点</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/xsumwp3307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/xsumwp3307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/3/12/n12808230.htm">【秦鹏直播】女辅警敲诈案是冤案？盘点9大疑点</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/boyqsg391/djy/blob/master/gb/21/3/12/n12808230.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/boyqsg391/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/boyqsg391/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/boyqsg391/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/boyqsg391/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/boyqsg391/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/boyqsg391/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/boyqsg391/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/boyqsg391/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/boyqsg391/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/boyqsg391/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/boyqsg391/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/boyqsg391/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/boyqsg391/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/boyqsg391/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/boyqsg391/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/boyqsg391/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/boyqsg391/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/boyqsg391/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/boyqsg391/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/boyqsg391/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/boyqsg391/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/boyqsg391/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/boyqsg391/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/boyqsg391/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/boyqsg391/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/boyqsg391/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/boyqsg391/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/boyqsg391/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/boyqsg391/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/boyqsg391/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/boyqsg391/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/boyqsg391/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/boyqsg391/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/boyqsg391/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/boyqsg391/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/boyqsg391/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/boyqsg391/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/boyqsg391/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/boyqsg391/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/boyqsg391/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/boyqsg391/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/boyqsg391/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/boyqsg391/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/boyqsg391/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/boyqsg391/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/boyqsg391/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/boyqsg391/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/boyqsg391/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/xsumwp3307/djy/blob/master/gb/21/3/12/n12808230.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/xsumwp3307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/xsumwp3307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/xsumwp3307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
